# InterActiveVoice

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/interactivevoice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/kotlin/com/example/interactivevoice/: MainActivity.kt  Whisper.kt
app/src/main/kotlin/com/example/interactivevoice/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/interactivevoice/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
